some proper documentation organisation

--- a/Medical Chatbot [END 2 END] [NLP]/templates/index.html
+++ b/Medical Chatbot [END 2 END] [NLP]/templates/index.html
@@ -27,7 +27,8 @@
       function getSymptomsData(data) {
         symptoms = data;
       }
-      getSymptomsData({{ data | tojson }});
+      getSymptomsData({{data | tojson }});
+      // getSymptomsData('{{ data | tojson }}');
     </script>
     <title>Medical Chatbot</title>
   </head>
